--- a/public/index.html
+++ b/public/index.html
@@ -214,7 +214,7 @@
 
     <div class="container gradient-custom py-5 heroStyle" style="font-family: 'Proxima Nova', sans-serif;">
         <span class="col-md-8 col-12 mainTitle py-5 px-4 shit" id="sec">
-            THE S*IT SHOW
+            MY WORKS
         </span>
 
     <div class="container row align-items-center py-4">
